joos1syntax/test/pos/SimpleIf2.java
public class SimpleIf2 {
  public SimpleIf2() {
    if (true)
      ;
    else
      ;
  }
}
