joos1syntax/test/neg/BadIf5.java
public class BadIf5 {
  public BadIf5() {
    if (true)
      ;
    else
      ;
    else
      ;
  }
}
